--- a/app/index.html
+++ b/app/index.html
@@ -71,8 +71,9 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/firebase/firebase.js"></script>
   <script src="bower_components/angularfire/dist/angularfire.js"></script>
+  <script src="bower_components/rsvp/rsvp.js"></script>
   <script src="bower_components/geofire/dist/geofire.js"></script>
-  <script src="bower_components/lodash/dist/lodash.compat.js"></script>
+  <script src="bower_components/lodash/lodash.js"></script>
   <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <!-- endbower -->
