--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,13 @@
 
 <div class="container">
 
+  <a href="#/">Hitta efterfest</a>
+
+  <a href="#/skapa">Skapa efterfest</a>
+
+  <a href="#/dina-efterfester">Dina efterfester</a>
+
+
     <div ng-view="">
 
 </div>
@@ -81,7 +88,6 @@
   <!-- build:js({.tmp,app}) scripts/scripts.js -->
   <script src="scripts/app.js"></script>
   <script src="scripts/controllers/find.js"></script>
-  <script src="scripts/controllers/main.js"></script>
   <script src="scripts/angularfire/config.js"></script>
   <script src="scripts/angularfire/firebase.utils.js"></script>
   <script src="scripts\filters\reverse.js"></script>
